--- a/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
+++ b/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
@@ -1,11 +1,15 @@
 <mat-card>
-    <section class="entete"><img
-            src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" />Test
+
+    <section class="entete">
+        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" />Test
     </section>
-    <div class="inputCom">
-        <mat-form-field>
-            <textarea id="texteCom" #searchElement matInput placeholder="Votre commentaire"></textarea>
-        </mat-form-field>
-    </div>
-    <button mat-button>Envoyer</button>
+    <form (ngSubmit)="creation()">
+        <div class="inputCom">
+            <mat-form-field>
+                <input type="text" id="texteCom" #searchElement matInput placeholder="Votre commentaire"
+                    name="commentaire._texteCommentaire" [(ngModel)]="commentaire._texteCommentaire">
+            </mat-form-field>
+        </div>
+        <button mat-button type="submit">Envoyer</button>
+    </form>
 </mat-card>
