--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
@@ -16,10 +16,8 @@
         <app-pastille-categorie></app-pastille-categorie>
     </div>
 </mat-card-header>
-<img mat-card-image src="{{idee._image}}"  [routerLink]="['idea', idee._id]"
-routerLinkActive="router-link-active"/>
-<mat-card-content [routerLink]="['idea', idee._id]"
-routerLinkActive="router-link-active"> 
+<img mat-card-image src="{{idee._image}}" [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active" />
+<mat-card-content [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active">
     {{idee._content}}
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque dictum risus in vehicula.
     Aenean congue, massa a suscipit consequat, metus massa mattis sapien, at elementum metus ante a ante. Morbi
