--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="creationIdeeForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="card-ajouter-idee">
     <mat-card-header>
       <mat-card-title>Poster une idee</mat-card-title>
@@ -8,8 +8,16 @@
         <div class="col">
           <mat-form-field class="full-width">
             <strong><input matInput placeholder="Titre" formControlName="titre"></strong>
-            <mat-error *ngIf="addressForm.controls['titre'].hasError('required')">
+            <mat-error *ngIf="creationIdeeForm.controls['titre'].hasError('required')">
               Le titre est <strong>requis</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col">
+          <mat-form-field class="full-width">
+            <input matInput placeholder="Catégorie" formControlName="categorie">
+            <mat-error *ngIf="creationIdeeForm.controls['categorie'].hasError('required')">
+              La catégorie est <strong>requise</strong>
             </mat-error>
           </mat-form-field>
         </div>
@@ -25,7 +33,7 @@
         <div class="col">
           <mat-form-field class="full-width" id="textArea">
             <textarea matInput placeholder="Description/contenu de l'idée" formControlName="contenu"></textarea>
-            <mat-error *ngIf="addressForm.controls['contenu'].hasError('required')">
+            <mat-error *ngIf="creationIdeeForm.controls['contenu'].hasError('required')">
               Le contenu est <strong>requis</strong>
             </mat-error>
           </mat-form-field>
@@ -34,7 +42,7 @@
 
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Submit</button>
+      <button mat-raised-button color="primary" type="submit">Poster</button>
     </mat-card-actions>
   </mat-card>
 </form>
