Ajout lien "Nouvelle idée"

--- a/ideaBoxFront/src/app/components/nav/nav.component.css
+++ b/ideaBoxFront/src/app/components/nav/nav.component.css
@@ -79,5 +79,12 @@
 #logo {
 
   display:block;
-  width:187px;
+  width:175px;
+  margin-left:16px;
+  margin-right:16px;
+}
+
+a mat-icon {
+
+  font-size: 18px;
 }
