--- a/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.css
+++ b/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.css
@@ -1,17 +1,12 @@
 mat-chip {
-    max-width: 40% ;
+    max-width: 150px ;
     word-spacing: 1rem;
     cursor: pointer;
-    padding-right: 2%;
  }
 
  mat-icon {
-     padding-right : 10%;
+     padding-right : 9px;
  }
-
-
-
-
 
  
 
