Pastille dans idée

--- a/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
@@ -9,7 +9,7 @@
             <button mat-menu-item>Expand</button>
             <button mat-menu-item>Masquer</button>
         </mat-menu>
-        <app-pastille-categorie></app-pastille-categorie>
+        <app-pastille-categorie [categorie]="idee._categorie"></app-pastille-categorie>
 
     </div>
 </mat-card-header>
