--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -13,7 +13,7 @@
             <button mat-menu-item>Masquer</button>
             <button mat-menu-item>Test</button>
         </mat-menu>
-        <app-pastille-categorie></app-pastille-categorie>
+        <app-pastille-categorie [categorie]="idee._categorie"></app-pastille-categorie>
     </div>
 </mat-card-header>
 <img mat-card-image [src]="idee._image" [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active" />
