Pour qu'Alban me foute la paix

--- a/ideaBoxFront/src/app/components/navigation/menu-connexion/menu-connexion.component.html
+++ b/ideaBoxFront/src/app/components/navigation/menu-connexion/menu-connexion.component.html
@@ -1,22 +1,20 @@
 <div *ngIf="estConnecte == false">
     <div *ngIf="posmenu == 'side'">
-        <a mat-list-item routerLink="/inscription" routerLinkActive="active"
+        <a mat-list-item [routerLink]="['/inscription']" routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }">
             Inscription</a>
-        <a mat-list-item routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-            (click)="openDialog()">Connexion</a>
+        <a mat-list-item (click)="openDialog()">Connexion</a>
     </div>
     <div *ngIf="posmenu == 'top'">
-        <a mat-button routerLink="/inscription" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a mat-button [routerLink]="['/inscription']" routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }">
             Inscription</a>
-        <a mat-button routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-            (click)="openDialog()">Connexion</a>
+        <a mat-button (click)="openDialog()">Connexion</a>
     </div>
 </div>
 <div *ngIf="estConnecte == 'true'">
     <div *ngIf="posmenu == 'side'">
-        <a mat-list-item routerLink="#" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-            (click)="deleteSession()">Déconnexion</a>
+        <a mat-list-item (click)="deleteSession()">Déconnexion</a>
     </div>
     <div *ngIf="posmenu == 'top'">
         <button mat-button [matMenuTriggerFor]="menu">
