--- a/ideaBoxFront/src/app/components/navigation/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/navigation/nav/nav.component.html
@@ -8,7 +8,7 @@
         <img id="logo" src="../../../assets/images/logo.svg" alt="Social Idea">
       </a>
       <div fxShow="true" fxHide.lt-md>
-        <a mat-button *ngFor="let link of links" routerLink="{{link.url}}" routerLinkActive="active"
+        <a mat-button *ngFor="let link of links" [routerLink]="[link.url]" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">{{link.name}}<mat-icon class="material-icons-outlined">
             {{link.icon}}</mat-icon></a>
       </div>
@@ -22,7 +22,7 @@
     <mat-sidenav #sidenav>
       <mat-nav-list>
         <app-menu-connexion posmenu="side"></app-menu-connexion>
-        <a mat-list-item *ngFor="let link of links" routerLink="{{link.url}}" routerLinkActive="active">{{link.name}}
+        <a mat-list-item *ngFor="let link of links" [routerLink]="[link.url]" routerLinkActive="active">{{link.name}}
           <mat-icon class="material-icons-outlined">
             {{link.icon}}</mat-icon></a>
       </mat-nav-list>
