--- a/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.html
+++ b/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.html
@@ -1,6 +1,5 @@
 <mat-chip-list aria-label="Pastille de Categorie">
-    <!--boucle ngFor pour afficher les item de la liste _pastille-->
-    <mat-chip>
+    <mat-chip [routerLink]="['categorie', categorie._id]" routerLinkActive="router-link-active">
         <!--<mat-icon>{{item._icone}}</mat-icon> {{item._categorie}}-->
         <mat-icon>{{categorie._icone}}</mat-icon> {{categorie._categorie}}
         <!--qui afficher chaque item._icone et chaque item._categorie liste de _pastille-->
