--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -1,5 +1,5 @@
 <mat-card-header>
-    <mat-card-title class="myCardTitle" [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active">
+    <mat-card-title class="myCardTitle" [routerLink]="['/idea', idee._id]" routerLinkActive="router-link-active">
         {{idee._titre}}
 
     </mat-card-title>
@@ -16,8 +16,8 @@
         <app-pastille-categorie [categorie]="idee._categorie"></app-pastille-categorie>
     </div>
 </mat-card-header>
-<img mat-card-image [src]="idee._image" [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active" />
-<mat-card-content [routerLink]="['idea', idee._id]" routerLinkActive="router-link-active">
+<img mat-card-image [src]="idee._image" [routerLink]="['/idea', idee._id]" routerLinkActive="router-link-active" />
+<mat-card-content [routerLink]="['/idea', idee._id]" routerLinkActive="router-link-active">
     {{idee._content}}
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque dictum risus in vehicula.
     Aenean congue, massa a suscipit consequat, metus massa mattis sapien, at elementum metus ante a ante. Morbi
