--- a/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.css
+++ b/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.css
@@ -14,3 +14,10 @@
   .dashboard-card-content {
     text-align: center;
   }
+  .example-icon {
+    padding: 0 14px;
+  }
+
+  mat-toolbar{
+      background: #bbdefb;
+  }
