--- a/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
+++ b/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
@@ -1,10 +1,17 @@
-<h2 class="mat-h2"><mat-icon>{{categorie._icone}}</mat-icon>{{categorie._categorie}}</h2>
+<mat-toolbar>
+    <mat-toolbar-row>
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example">
+            {{categorie._icone}}</mat-icon>
+        <span>{{categorie._categorie}}</span>
+        <span class="example-spacer"></span>
+    </mat-toolbar-row>
+</mat-toolbar>
 <div class="grid-container">
-<mat-grid-list cols="2" rowHeight="600px">
-    <mat-grid-tile *ngFor="let idee of idees; let i =index" [colspan]="2" [rowspan]="1">
-      <mat-card class="dashboard-card" tabindex="i">
-        <app-idea-post  [idee]='idee'></app-idea-post>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+    <mat-grid-list cols="2" rowHeight="600px">
+        <mat-grid-tile *ngFor="let idee of idees; let i =index" [colspan]="2" [rowspan]="1">
+            <mat-card class="dashboard-card" tabindex="i">
+                <app-idea-post [idee]='idee'></app-idea-post>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
