--- a/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
+++ b/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
@@ -1,2 +1,33 @@
-<img [src]="membre._profilePic">
-<h3 class="mat-h3">{{membre._pseudo}}</h3>
+<mat-card class="profil-card">
+    <mat-card-header>
+        <img mat-card-avatar [src]="membre._profilePic" class="profilPic">
+        <mat-card-title>{{membre._pseudo}}</mat-card-title>
+        <mat-card-subtitle>This is a subtitle : suplementary info could be found here</mat-card-subtitle>
+    </mat-card-header>
+    <!--  <mat-card-content class="profil-desc">
+        
+    </mat-card-content>
+-->
+    <mat-card-actions class="profil-actions">
+        <button mat-button>
+            <mat-icon>add</mat-icon>
+        </button>
+        <button mat-button>
+            <mat-icon>message</mat-icon>
+        </button>
+        <button mat-button>
+            <mat-icon>share</mat-icon>
+        </button>
+        <button mat-button>
+            <mat-icon>block</mat-icon>
+        </button>
+    </mat-card-actions>
+</mat-card>
+<mat-card>
+    <mat-tab-group>
+        <mat-tab label="Postes"> <code>Historique idées Postées</code> </mat-tab>
+        <mat-tab label="Commentaires"> <code>Historique commentaires</code> </mat-tab>
+        <mat-tab label="Likes"> <code>(Perso) Historique idées likées</code> </mat-tab>
+        <mat-tab label="Collaborations"> <code>(Perso) Historique en tant que collaborateurs</code> </mat-tab>
+    </mat-tab-group>
+</mat-card>
