--- a/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
@@ -1,6 +1,8 @@
 <mat-card-header>
     <mat-card-title>{{idee._titre}}</mat-card-title>
-    <mat-card-subtitle>{{idee._originalPosteur}}</mat-card-subtitle>
+    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee._originalPosteur._id]"
+        routerLinkActive="router-link-active">
+        {{idee._originalPosteur._pseudo}}</mat-card-subtitle>
     <div fxFlex>
         <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
             <mat-icon>more_vert</mat-icon>
@@ -13,7 +15,7 @@
 
     </div>
 </mat-card-header>
-<img mat-card-image src="{{idee._image}}" />
+<img mat-card-image [src]="idee._image" />
 
 <mat-card-content>
 
