--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -3,7 +3,9 @@
         {{idee._titre}}
 
     </mat-card-title>
-    <mat-card-subtitle>{{idee._originalPosteur}}</mat-card-subtitle>
+    <mat-card-subtitle class="subtitle-pseudo" [routerLink]="['/profil', idee._originalPosteur._id]"
+        routerLinkActive="router-link-active">
+        {{idee._originalPosteur._pseudo}}</mat-card-subtitle>
     <div fxFlex>
         <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
             <mat-icon>more_vert</mat-icon>
