--- a/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
+++ b/ideaBoxFront/src/app/pages/page-membre/page-membre.component.html
@@ -10,6 +10,9 @@
 -->
     <mat-card-actions class="profil-actions">
         <button mat-button>
+            Dummy buttons
+        </button>
+        <button mat-button>
             <mat-icon>add</mat-icon>
         </button>
         <button mat-button>
