front page a bit cleaner

--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -26,6 +26,7 @@
     id
     neque ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vel diam sitis pulvinar,
     cursus id nunc. Maecenas consectetur libero ut nibh luctus, vel finibus odio consectetur.
+    azeaze
 </mat-card-content>
 <mat-card-actions>
     <app-bar-icons-idee [openComment]='openComment'></app-bar-icons-idee>
