--- a/ideaBoxFront/src/app/pages/front-page/front-page.component.html
+++ b/ideaBoxFront/src/app/pages/front-page/front-page.component.html
@@ -1,5 +1,1 @@
-<div class="grid-container" *ngFor="let idee of ideeService.idees; let i =index">
-  <mat-card class="dashboard-card" tabindex="i">
-    <app-idea-post [idee]='idee'></app-idea-post>
-  </mat-card>
-</div>
+<app-idee-list [ideesList]="ideeService.idees"></app-idee-list>
