--- a/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
+++ b/ideaBoxFront/src/app/pages/page-categorie/page-categorie.component.html
@@ -6,12 +6,4 @@
         <span class="example-spacer"></span>
     </mat-toolbar-row>
 </mat-toolbar>
-<div class="grid-container">
-    <mat-grid-list cols="2" rowHeight="600px">
-        <mat-grid-tile *ngFor="let idee of idees; let i =index" [colspan]="2" [rowspan]="1">
-            <mat-card class="dashboard-card" tabindex="i">
-                <app-idea-post [idee]='idee'></app-idea-post>
-            </mat-card>
-        </mat-grid-tile>
-    </mat-grid-list>
-</div>
+<app-idee-list [ideesList]="idees"></app-idee-list>
