--- a/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
@@ -18,7 +18,7 @@
 <img mat-card-image [src]="idee._image" />
 
 <mat-card-content>
-
+    <app-html-content></app-html-content>
     {{idee._content}}
     <p>Et et veniam pariatur elit ipsum do. Laboris commodo Lorem incididunt amet id deserunt in. Nostrud quis
         non ullamco aute laboris nisi dolore esse officia laborum anim amet et pariatur.</p>
