--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -30,10 +30,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
-
-              <ckeditor formControlName="_content" [editor]="Editor"></ckeditor>
-
+        <div class="col ">
+              <ckeditor class="ckeditor-idee" formControlName="_content" [editor]="Editor" [config]="{
+              toolbar: ['heading','|', 'bold', 'italic','link', 'bulletedList', 'numberedList','|',  'blockQuote','MediaEmbed','undo','redo' ],
+             placeholder: 'Taper une description ici ...'
+             }"></ckeditor>
         </div>
       </div>
 
