--- a/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-post/idea-post.component.html
@@ -20,7 +20,7 @@
 </mat-card-header>
 <img mat-card-image [src]="idee._image" [routerLink]="['/idea', idee._id]" routerLinkActive="router-link-active" />
 <mat-card-content [routerLink]="['/idea', idee._id]" routerLinkActive="router-link-active">
-    <div [innerHtml]="idee._content"></div>
+    <div [innerHtml]="idee._content.substring(0,512)"></div>
 </mat-card-content>
 <mat-card-actions>
     <app-bar-icons-idee [openComment]='openComment'></app-bar-icons-idee>
