--- a/ideaBoxFront/src/app/pages/front-page/front-page.component.html
+++ b/ideaBoxFront/src/app/pages/front-page/front-page.component.html
@@ -8,12 +8,12 @@
   </mat-grid-list>
 </div>-->
 
-<div style="max-height: 500px; overflow: scroll;" infiniteScroll (scrolled)="onScrollDown()"
-  [infiniteScrollDistance]="scrollDistance" [infiniteScrollThrottle]="scrollThrottle" [scrollWindow]="false">
-  <div *ngFor="let idee of listIdees">
-    <div>
-      <h4>{{idee._titre}}</h4> by {{idee._originalPosteur._pseudo}}
-    </div>
-    <img [src]="idee._image" alt="ckc">
-  </div>
+<div style="max-height: 100%; overflow: scroll;overflow-x: hidden;" infiniteScroll (scrolled)="onScrollDown()"
+  [infiniteScrollDistance]="scrollDistance" [infiniteScrollThrottle]="scrollThrottle" [scrollWindow]="false"
+  class="grid-container">
+  <mat-grid-list cols="2" rowHeight="600px" *ngFor="let idee of listIdees">
+    <mat-card class="dashboard-card" tabindex="i">
+      <app-idea-post [idee]='idee'></app-idea-post>
+    </mat-card>
+  </mat-grid-list>
 </div>
