--- a/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.css
+++ b/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.css
@@ -1,7 +1,8 @@
 .grid-container {
     margin: auto;
-
-
+    max-height: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .dashboard-card {
