--- a/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.html
+++ b/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.html
@@ -1,5 +1,8 @@
-<div class="grid-container" *ngFor="let idee of ideesList; let i =index">
-    <mat-card class="dashboard-card" tabindex="i">
-        <app-idea-post [idee]='idee'></app-idea-post>
-    </mat-card>
+<div class="grid-container" infiniteScroll (scrolled)="onScrollDown()" [infiniteScrollDistance]="scrollDistance"
+    [infiniteScrollThrottle]="scrollThrottle" [scrollWindow]="false">
+    <div *ngFor="let idee of displayedIdees; let i =index">
+        <mat-card class="dashboard-card" tabindex="i">
+            <app-idea-post [idee]='idee'></app-idea-post>
+        </mat-card>
+    </div>
 </div>
