mise en forme formulaire

--- a/ideaBoxFront/src/app/pages/page-inscription/page-inscription.component.html
+++ b/ideaBoxFront/src/app/pages/page-inscription/page-inscription.component.html
@@ -7,25 +7,7 @@
             <div class="row">
                 <div class="col">
                     <mat-form-field class="full-width">
-                        <input matInput placeholder="Nom" formControlName="_nom">
-                        <mat-error *ngIf="creationInscriptionForm.controls['_nom'].hasError('required')">
-                            Un Nom est <strong>requis</strong>
-                        </mat-error>
-                    </mat-form-field>
-                </div>
-                <div class="col">
-                    <mat-form-field class="full-width">
-                        <input matInput placeholder="Prénom" formControlName="_prenom">
-                        <mat-error *ngIf="creationInscriptionForm.controls['_prenom'].hasError('required')">
-                            Un Prénom est <strong>requis</strong>
-                        </mat-error>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <mat-form-field class="full-width">
-                        <input matInput placeholder="Mail" formControlName="_mail">
+                        <input matInput placeholder="Mail" formControlName="_mail" type="mail">
                         <mat-error *ngIf="creationInscriptionForm.controls['_mail'].hasError('required')">
                             Un Mail est <strong>requis</strong>
                         </mat-error>
@@ -43,9 +25,27 @@
                 </div>
                 <div class="col">
                     <mat-form-field class="full-width">
-                        <input matInput placeholder="Mot de Passe" formControlName="_motDePasse">
+                        <input matInput placeholder="Mot de Passe" formControlName="_motDePasse" type="password">
                         <mat-error *ngIf="creationInscriptionForm.controls['_motDePasse'].hasError('required')">
                             Un Mot de Passe est <strong>requis</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <input matInput placeholder="Nom" formControlName="_nom">
+                        <mat-error *ngIf="creationInscriptionForm.controls['_nom'].hasError('required')">
+                            Un Nom est <strong>requis</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col">
+                    <mat-form-field class="full-width">
+                        <input matInput placeholder="Prénom" formControlName="_prenom">
+                        <mat-error *ngIf="creationInscriptionForm.controls['_prenom'].hasError('required')">
+                            Un Prénom est <strong>requis</strong>
                         </mat-error>
                     </mat-form-field>
                 </div>
