--- a/ideaBoxFront/src/app/pages/page-inscription/page-inscription.component.css
+++ b/ideaBoxFront/src/app/pages/page-inscription/page-inscription.component.css
@@ -1,3 +1,10 @@
+form{
+  max-width:  600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
+
 .full-width {
     width: 100%;
   }
