--- a/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idee/idea-full/idea-full.component.html
@@ -22,5 +22,5 @@
 
 </mat-card-content>
 <mat-card-actions>
-    <app-bar-icons-idee></app-bar-icons-idee>
+    <app-bar-icons-idee [openComment]='openComment'></app-bar-icons-idee>
 </mat-card-actions>
