--- a/ideaBoxFront/src/app/components/commentaire/commentaire.component.html
+++ b/ideaBoxFront/src/app/components/commentaire/commentaire.component.html
@@ -1,6 +1,8 @@
-<mat-card *ngFor="let coment of coments">
-    <section class="entete"><img
-            src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" />Nom membre
+<mat-card *ngFor="let comment of commentService._comments" class="commentaire-card">
+
+    <mat-card-header>
+        <img mat-card-avatar [src]="comment._membre._profilePic" />
+        <h3 class="mat-h3">{{comment._membre._pseudo}}</h3>
         <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
             <mat-icon>more_vert</mat-icon>
         </button>
@@ -8,13 +10,11 @@
             <button mat-menu-item>Modifier</button>
             <button mat-menu-item>Supprimer</button>
         </mat-menu>
-    </section>
+    </mat-card-header>
 
     <mat-card-content>
-        t vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa</mat-card-content>
-    <app-bar-icons-idee [openComment]="openComment"></app-bar-icons-idee>
-    <app-input-commentaire *ngIf="comment"></app-input-commentaire>
+        {{comment._texteCommentaire}}</mat-card-content>
+    <app-bar-icons-idee [openComment]="openComment" [score]='comment._score'></app-bar-icons-idee>
+    <app-input-commentaire *ngIf="isCommentable"></app-input-commentaire>
 
 </mat-card>
