--- a/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
+++ b/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
@@ -1,7 +1,8 @@
-<mat-card>
+<mat-card class="input-card">
 
     <section class="entete">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" />Test
+        <img mat-card-avatar
+            src="https://secure.download.dm.origin.com/production/avatar/prod/userAvatar/18048778/416x416.JPEG" />alban_fooz_dev
     </section>
     <form (ngSubmit)="creation()">
         <div class="inputCom">
