--- a/ideaBoxFront/src/app/components/navigation/menu-connexion/connexion-popup.component.html
+++ b/ideaBoxFront/src/app/components/navigation/menu-connexion/connexion-popup.component.html
@@ -1,6 +1,25 @@
-<div mat-dialog-content>
-    Connexion
-</div>
-<div mat-dialog-actions>
-    <button mat-flat-button color="primary" (click)="createSession()">Se connecter</button>
+<div mat-dialog-content style="height:200px;">
+    <form [formGroup]="connexionForm" novalidate (ngSubmit)="submit()">
+
+        <mat-form-field>
+            <mat-label>Identifiant</mat-label>
+            <input matInput type="text" formControlName="_login" />
+            <mat-error *ngIf="connexionForm.controls['_login'].hasError('required')">
+                Identifiant requis
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+            <mat-label>Mot de passe</mat-label>
+            <input matInput type="password" formControlName="_password" />
+            <mat-error *ngIf="connexionForm.controls['_password'].hasError('required')">
+                Mot de passe requis
+            </mat-error>
+        </mat-form-field>
+
+        <div mat-dialog-actions>
+            <button mat-flat-button color="primary" type="submit">Se connecter</button>
+        </div>
+
+    </form>
 </div>
