--- a/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
+++ b/ideaBoxFront/src/app/pages/page-ajout-idee/page-ajout-idee.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <p>Nombre de Caracteres : {{lengthOfContent}}</p>
-      <p>Seul les 512 premiers carateres seront affichés (Warning : (to improve) y compris les balises HTML)</p>
+      <p>Seul les 512 premiers carateres seront affichés dans l'aperçu.</p>
 
     </mat-card-content>
     <mat-card-actions>
