--- a/ideaBoxFront/src/app/components/navigation/searchbar/searchbar.component.css
+++ b/ideaBoxFront/src/app/components/navigation/searchbar/searchbar.component.css
@@ -71,3 +71,7 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
   color:grey;
   font-style: italic;
 }
+.resultText {
+
+  text-overflow: ellipsis;
+}
