--- a/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.html
+++ b/ideaBoxFront/src/app/components/idee/idee-list/idee-list.component.html
@@ -1,6 +1,13 @@
 <div class="grid-container" infiniteScroll (scrolled)="onScrollDown()" [infiniteScrollDistance]="scrollDistance"
     [infiniteScrollThrottle]="scrollThrottle" [scrollWindow]="false">
     <div *ngFor="let idee of displayedIdees; let i =index">
+        <mat-card *ngIf="i!=0 && i%2==0" class="dashboard-card">
+            <mat-icon> attach_money</mat-icon>
+            <mat-icon>euro_symbol</mat-icon>
+            Ceci est une merveilleuse bannière de publicité servant à financer le site.
+            <mat-icon>euro_symbol</mat-icon>
+            <mat-icon> attach_money</mat-icon>
+        </mat-card>
         <mat-card class="dashboard-card" tabindex="i">
             <app-idea-post [idee]='idee'></app-idea-post>
         </mat-card>
